# formax-homework

./: .gitignore  README.md
DeepLearning/: README.md  color.py
homework-1~2.1/linux_practice/backup/: daily_report.txt
homework-3(cmake)/CMake_Test/: CMakeLists.txt
homework-3(cmake)/CMake_Test/common/: CMakeLists.txt
homework-3(cmake)/CMake_Test/common/kalman/: CMakeLists.txt
homework-3(cmake)/CMake_Test/common/math/: CMakeLists.txt
homework-3(cmake)/CMake_Test/modules/A1/: CMakeLists.txt
homework-3(cmake)/CMake_Test/modules/A2/: CMakeLists.txt
homework-3(cmake)/CMake_Test/modules/M1/: CMakeLists.txt
homework-3(cmake)/CMake_Test/modules/M2/: CMakeLists.txt
linux与cmake/: README.md
linux与cmake/homework-1~2.1/: run.sh
linux与cmake/homework-3(cmake)/CMake_Test/common/: CMakeLists.txt
linux与cmake/homework-3(cmake)/CMake_Test/common/kalman/: CMakeLists.txt
linux与cmake/homework-3(cmake)/CMake_Test/common/math/: CMakeLists.txt
linux与cmake/homework-3(cmake)/CMake_Test/modules/: CMakeLists.txt
linux与cmake/homework-3(cmake)/CMake_Test/modules/A1/: CMakeLists.txt
linux与cmake/homework-3(cmake)/CMake_Test/modules/A2/: CMakeLists.txt
linux与cmake/homework-3(cmake)/CMake_Test/modules/M1/: CMakeLists.txt
linux与cmake/homework-3(cmake)/CMake_Test/modules/M2/: CMakeLists.txt
搜索算法与机器学习/: README.md
搜索算法与机器学习/作业1/: main.cpp
搜索算法与机器学习/作业2/: linear_regression_manual.py  plain.ipynb  ridge.ipynb  run_plain_regression.py  run_ridge_regression.py
搜索算法与机器学习/作业3/: iris.ipynb
搜索算法与机器学习/作业4/: Kmeans_Exp.ipynb
